# drake_hydra_interact

./: CMakeLists.txt  README.md  package.xml  setup.py
environments/: README.md
environments/sink/: bin.sdf  environment_description.yaml  saved_scenes.yaml
environments/table/: environment_description.yaml
src/: .gitignore  cupboard_without_doors.sdf  hand-regularfinal-scaled-1.stl  run_dishrack_interaction.py  test.snopt
src/drake_hydra_interact/: hydra_system.py  run_interaction.py
